Update parser migration spec with Codex review fixes
- MethodInfo → ExecutableInfo covering methods + constructors
- Add Path file field for tree-sitter→JDT fallback path
- Fix JDT version: 3.45.0 (3.38 doesn't support Java 25)
- Fix tree-sitter coordinates: jtreesitter (not tree-sitter)
- Add batch per-file parsing to avoid reparsing same file N times
- Add error isolation (null = skipped) in FlowGraphService
- Check binding.isRecovered() for JDT resolution accuracy
- Expand tree-sitter queries for constructors, interfaces, enums, records
- Document --enable-native-access JVM arg requirement

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>